# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
